[gd_scene load_steps=15 format=2]

[ext_resource path="res://Script/Pause.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/Font_Textur/Pixel_Font_free.ttf"

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://assets/Font_Textur/Pixel_Font_free.ttf"

[sub_resource type="DynamicFont" id=6]
font_data = SubResource( 5 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.121569, 0.121569, 0.121569, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="DynamicFontData" id=7]
font_path = "res://assets/Font_Textur/Pixel_Font_free.ttf"

[sub_resource type="DynamicFont" id=8]
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=11]
font_path = "res://assets/Font_Textur/Pixel_Font_free.ttf"

[sub_resource type="DynamicFont" id=12]
font_data = SubResource( 11 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://assets/Font_Textur/Pixel_Font_free.ttf"

[sub_resource type="DynamicFont" id=10]
font_data = SubResource( 9 )

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/Font_Textur/Pixel_Font_free.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[node name="Pause" type="CanvasLayer"]
pause_mode = 2
layer = 100
script = ExtResource( 1 )

[node name="BlackOverlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.141176, 0.129412, 0.137255, 0.180392 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 157.0
margin_top = 15.0
margin_right = 307.0
margin_bottom = 246.0
custom_constants/separation = 20
alignment = 1

[node name="comment" type="Label" parent="CenterContainer/VBoxContainer"]
modulate = Color( 0.12549, 0.184314, 0.556863, 1 )
margin_right = 150.0
margin_bottom = 39.0
rect_min_size = Vector2( 0, 20 )
custom_fonts/font = SubResource( 4 )
text = "

You can click 'Esc' to unpause"

[node name="Resume" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 59.0
margin_right = 150.0
margin_bottom = 87.0
rect_min_size = Vector2( 70, 0 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 13 )
text = "Resume Game"

[node name="KeyControl" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 107.0
margin_right = 150.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 13 )
text = "Key Control"

[node name="SoundControl" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 155.0
margin_right = 150.0
margin_bottom = 183.0
custom_fonts/font = SubResource( 12 )
custom_styles/hover = SubResource( 13 )
text = "Sound Control"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 203.0
margin_right = 150.0
margin_bottom = 231.0
rect_min_size = Vector2( 70, 0 )
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 13 )
text = "Exit Game"

[node name="Title" type="Label" parent="."]
margin_left = 154.712
margin_top = -5.21412
margin_right = 230.712
margin_bottom = 16.7859
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 2 )
text = "Paused"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/KeyControl" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SoundControl" to="." method="_on_SoundControl_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
